--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -91,7 +91,7 @@ hand-crafting concurrent data structures.
 
 \input{introduction}
 \input{preliminaries}
-\input{algorithm}
+\input{algorithmB}
 \input{proof2}
 \input{evaluation}
 \input{related}
@@ -109,7 +109,7 @@ hand-crafting concurrent data structures.
 
 % We recommend abbrvnat bibliography style.
 
- 
+
 % The bibliography should be embedded for final submission.
 
 \bibliography{myRef}
