--- a/Tex/src/algorithmB.tex
+++ b/Tex/src/algorithmB.tex
@@ -171,7 +171,7 @@ and (3) $C_r$ does not contain instructions that write to shared objects.
 In the example of Figure~\ref{figure:transformation:before}, $C_r$ is the code in lines \ref{code:beginRead}-\ref{code:endRead},
 and $C_u$ is the code in lines \ref{code:beginUpdate}-\ref{code:endUpdate}.
 %
-In Section~\ref{xxx} we show that this simplifying assumption is not required by our full transformation.
+In Section~\ref{ssec:extendedTran} we show that this simplifying assumption is not required by our full transformation.
 
 \paragraph{Version Numbers}
 Our transformation instruments each object $o$ with an additional field \emph{version}.
