--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -3,7 +3,7 @@
 %
 % Requires temporary version of sigplanconf style file provided on
 % PLDI'15 web site.
-% 
+%
 \documentclass[pldi]{sigplanconf-pldi15}
 
 %
@@ -46,19 +46,19 @@
 %\setlength{\pdfpageheight}{\paperheight}
 %\setlength{\pdfpagewidth}{\paperwidth}
 
-%\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country} 
-%\copyrightyear{20yy} 
-%\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
+%\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country}
+%\copyrightyear{20yy}
+%\copyrightdata{978-1-nnnn-nnnn-n/yy/mm}
 %\doi{nnnnnnn.nnnnnnn}
 
-% Uncomment one of the following two, if you are not going for the 
+% Uncomment one of the following two, if you are not going for the
 % traditional copyright transfer agreement.
 
-%\exclusivelicense                % ACM gets exclusive license to publish, 
+%\exclusivelicense                % ACM gets exclusive license to publish,
                                   % you retain copyright
 
 %\permissiontopublish             % ACM gets nonexclusive license to publish
-                                  % (paid open-access papers, 
+                                  % (paid open-access papers,
                                   % short abstracts)
 
 %\titlebanner{PPoPP submission -- please do not distribute}        % These are ignored unless
@@ -118,7 +118,7 @@ hand-crafting concurrent data structures.
 
 
 \input{introduction}
-\input{preliminaries}
+\input{preliminariesB}
 \input{algorithmB}
 \input{proof2}
 \input{evaluation}
